--- a/src/Components/cloud.css
+++ b/src/Components/cloud.css
@@ -1,72 +1,32 @@
-#reviews {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.comment {
-  max-width: 540px;
-  flex-basis: 50%;
-  margin-left: 50px;
-  margin-bottom: 25px;
-  padding-left: 53px;
-}
-
-.comment_bubble {
-  padding: 15px;
-  max-width: 470px;
-}
-
-.comment_bubble {
-  background: #ebebeb;
-  position: relative;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  margin-left: 50px;
-}
-
-.comment_bubble:before {
-  content: "";
-  position: absolute;
-  right: 100%;
-  top: 25px;
-  width: 0;
-  height: 0;
-  border-top: 12px solid transparent;
-  border-right: 13px solid #0a0a0a;
-  border-bottom: 12px solid transparent;
-}
-
-.speech {
+.bubble {
 	position: relative;
-	width: 500px;
-	height: 100px;
+	width: 300px;
 	text-align: center;
-	line-height: 100px;
-	background-color: #fff;
-	border: 3px solid #666;
+	margin: 0 20px 70px;
+	border: 3px solid #333;
 	border-radius: 30px;
-	box-shadow: 2px 2px 4px #888;
+	font-family: sans-serif;
+	padding: 20px;
 }
 
-.speech:before { 
-  content: ' ';
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: -28px;
-  top: 13px;
-  border: 35px solid;
-  border-color: transparent transparent #666 transparent;
+.bubble:before,
+.bubble:after {
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+
+.speech:before {
+  left: 30px;
+  bottom: -43px;
+  border: 21px solid;
+  border-color: #333 transparent transparent #333;
 }
 
 .speech:after {
-  content: ' ';
-  position: absolute;
-  width: 0;
-  height: 0;
-  left: -19px;
-  top: 10px;
-  border: 33px solid;
-  border-color: transparent transparent #fff transparent;
+  left: 33px;
+  bottom: -35px;
+  border: 21px solid;
+  border-color: #F5F5F5 transparent transparent #F5F5F5;
 }
